remove jdk 17 api and replace it to 11 for more compatibility with old projects | increase version to 2.1.1